objects/Media_Bucket__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Buckets</relationshipLabel>
        <relationshipName>Media_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>Media_Bucket_Item__c.Media_Bucket__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>Media_Order__c.Cost__c</summarizedField>
        <summaryForeignKey>Media_Order__c.Media_Bucket__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Media Bucket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Media Bucket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>